--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "gray-matter": "^4.0.3",
+    "marked": "^16.1.2",
     "next": "15.4.5",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
