--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "fuse.js": "^7.1.0",
     "glob": "^10.4.5",
     "gray-matter": "^4.0.3",
     "marked": "^16.1.2",
