--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "19.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "resend": "^6.0.2"
+    "remark-mdx": "^3.1.1",
+    "remark-stringify": "^11.0.0",
+    "resend": "^6.0.2",
+    "strip-markdown": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
