Fix indentation errors

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked": "^16.1.2",
     "next": "15.4.5",
     "next-mdx-remote": "^5.0.0",
+    "openai": "^4.104.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "remark": "^15.0.1",
