--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "playwright": "^1.55.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
