--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.104.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-to-print": "^3.1.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-mdx": "^3.1.1",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "pdf-lib": "^1.17.1",
     "playwright": "^1.55.1",
     "tailwindcss": "^4",
     "typescript": "^5"
